instructions/src/instructions/snapshots/instructions__instructions__banner_instruction__tests__banner_no_current_step_distance.snap
---
source: instructions/src/instructions/banner_instruction.rs
expression: factory.make()
---
[
  {
    "distanceAlongGeometry": 0.0,
    "primary": {
      "text": "Main Street",
      "type": "merge",
      "modifier": "slight left",
      "components": [
        {
          "text": "Main Street",
          "type": "text"
        }
      ]
    }
  }
]
